--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
+    "@researchgate/react-intersection-observer": "0.7.4",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.4",
